--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,14 +31,9 @@ jobs:
           config_octicon: yes
           config_timezone: America/Sao_Paulo
           config_twemoji: yes
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
           plugin_base_indepth: yes
           plugin_followup: yes
           plugin_followup_indepth: yes
           plugin_followup_sections: repositories
+          plugin_gists: yes
           plugin_lines: yes
